v0.2 - December 5, 2011
* added verbose option and some logging

v0.1 - December 4, 2011
* initial public release